<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@color/color_background"
        tools:context=".MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                android:text="@string/kotlinBasic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:typeface="monospace"
                android:textAlignment="center"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAllCaps="true"/>


        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/input_01"
                android:ems="10"
                android:id="@+id/etInput01"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:typeface="monospace"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/input_02"
                android:ems="10"
                android:id="@+id/etInput02"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:typeface="monospace"
                android:layout_marginBottom="8dp"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <Button
                    android:text="@string/btnCompare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnCompare"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="36dp"/>

            <Button
                    android:text="@string/tv_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnShowList"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="36dp"
                    android:elevation="0dp"/>

        </LinearLayout>

        <TextView
                android:text="@string/result_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvResult01"
                android:typeface="monospace"
                android:textStyle="bold"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:padding="8dp"
                android:layout_marginBottom="8dp"/>

        <TextView
                android:text="@string/result_02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:typeface="monospace"
                android:textStyle="bold"
                android:id="@+id/tvResult02"
                android:padding="8dp"
                android:textAlignment="textStart"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"/>

        <TextView
                android:text="@string/result_03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:typeface="monospace"
                android:textStyle="bold"
                android:padding="8dp"
                android:id="@+id/tvResult03"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="16dp"/>
    </LinearLayout>

</ScrollView>